@@ -6,6 +6,7 @@ SVN
 - Fixed song length detection when importing midi files
 - Fixed note ordering bug that could potentially have caused songs to be messed up
 - Fixed copying and pasting from a song to another when both songs don't use the same beat resolution
+- Fixed wxString conversions, fixing problems with exporting song name, copyright and track names
 
 1.1.1
 - Added feature to see other tracks in background of current track (keyboard view only for now)
